# OS-architecture

./: CMakeLists.txt  README.md  mydb.sql  poco_server.cpp  poco_socket.cpp  poco_socket_https.cpp  poco_thread.cpp  readme.md  start.sh  test.cpp
Caching/: README.md  start.sh
Caching/database/: person.cpp
Caching/web_server/: CMakeLists.txt  README.md  http_request_factory.h  http_web_server.h
Caching/web_server/handlers/: person_handler.h
RESTService/: CMakeLists.txt  README.md  mydb.sql  start.sh  test.cpp
Sharding/: CMakeLists.txt  README.md  mydb.sql  start.sh
Sharding/database/: person.cpp
Sharding/web_server/: http_web_server.h
kafka/: README.md  mydb.sql  start.sh  start_writer.sh
kafka/database/: person.cpp  person.h
kafka/web_server/handlers/: person_handler.h
